# compare-strings

./: .gitignore  LICENSE  PRD.md  README.md  compare-strings.py  pyproject.toml  run.sh
.github/workflows/: ci.yml  pr-validation.yml
src/compare_strings/: __init__.py
tests/: test_compare_strings.py
